; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_event.c_mp_event_get_mime_type_score.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_event.c_mp_event_get_mime_type_score.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_ctx = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"text/uri-list\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"text/plain;charset=utf-8\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"text/plain\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"text\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_event_get_mime_type_score(%struct.input_ctx* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.input_ctx*, align 8
  %5 = alloca i8*, align 8
  store %struct.input_ctx* %0, %struct.input_ctx** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = call i64 @strcmp(i8* %6, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 10, i32* %3, align 4
  br label %26

10:                                               ; preds = %2
  %11 = load i8*, i8** %5, align 8
  %12 = call i64 @strcmp(i8* %11, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 5, i32* %3, align 4
  br label %26

15:                                               ; preds = %10
  %16 = load i8*, i8** %5, align 8
  %17 = call i64 @strcmp(i8* %16, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  store i32 4, i32* %3, align 4
  br label %26

20:                                               ; preds = %15
  %21 = load i8*, i8** %5, align 8
  %22 = call i64 @strcmp(i8* %21, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %26

25:                                               ; preds = %20
  store i32 -1, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %24, %19, %14, %9
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
